[package]
description = "HTTP/HTTPS fetching library"
homepage = "https://github.com/dmdcoin/diamond-node"
license = "GPL-3.0"
name = "fetch"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.1"
hyper = "1.6"
hyper-rustls = "0.27"
http = "0.1"
log = "0.4"
tokio = "0.1.22"
url = "2"
bytes = "0.4"

[features]
default = []
